Commiting a corrupt status due to a refactoring nightmare